# DiningSim

./: .gitignore  CMakeLists.txt  README.md  boundary_test.py  concurrent_test.py  stress_test.py  test_env.py
docs/: 01-需求分析.md  02-系统架构设计.md  03-同步机制详细说明.md  04-类图与时序图.md  05-测试用例设计.md  06-性能分析报告.md  07-系统工具分析.md
docs/images/: README.md
logs/: python_profile.prof  python_profile_report.txt
python/: gui_app.py
src/: main.cpp  simulation.cpp  simulation.h  win_sync.cpp  win_sync.h
test_py/: boundary_test.py  concurrent_test.py  run_all_tests.py  stress_test.py
test_py/test_reports/: boundary_test_report.md  concurrent_test_report.md  summary_report. md  summary_report.md
test_reports/: boundary_test_report.md  concurrent_test_report.md  summary_report.md
tests/: __init__.py  boundary_test.py  concurrent_test.py  performance_test.py  run_all_tests.py  stress_test.py
tools/: analyze_profile.py  profile_with_cprofile.py  visualize_profile.py
